Fixes #232: Class descriptions run off the edge of the page. (Changed the white-space from pre to pre-wrap in the css)

--- a/expo/gbe/static/styles/base.css
+++ b/expo/gbe/static/styles/base.css
@@ -331,7 +331,7 @@ td.describe
 .listdesc
 {
   padding-top: 10px;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 .listline
 {
